--- a/frontend/src/Components/Staff-Receptionist/ReceptionistDashboard/ReceptionistDashboard.css
+++ b/frontend/src/Components/Staff-Receptionist/ReceptionistDashboard/ReceptionistDashboard.css
@@ -19,7 +19,7 @@
     justify-content: center;
 }
 .ReceptionistDashboard-logo img {
-    width: 10vw;
+    width: 12vw;
 
 }
 .ReceptionistDashboard-profile {
@@ -29,13 +29,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    padding: 3vh 0;
+    justify-content: space-around;
+    padding: 5vh 0;
 }
 .ReceptionistDashboard-profile h2 {
     font-size: 1.8vw;
     font-weight: normal;
-    margin: 1.5vh 0 1.5vh 0;
+    margin-bottom: 1.5vh;
 }
 .ReceptionistDashboard-profile p {
     font-size: 1vw;
