--- a/frontend/src/Components/Staff-Receptionist/RegisterGuests/RegisterGuests.css
+++ b/frontend/src/Components/Staff-Receptionist/RegisterGuests/RegisterGuests.css
@@ -2,9 +2,6 @@
     width: 100%;
     height: 100vh;
     background-image: url(../../../assets/booking_bg.jpg);
-    background-repeat: no-repeat;
-    background-position: center ;
-    background-size: cover;
 
 }
 .registerGuests-hue {
@@ -21,7 +18,7 @@
     align-items: center;
 }
 .registerGuests-body-content-holder {
-    width: 85%;
+    width: 80%;
     height: 80vh;
     display: flex;
     flex-direction: column;
@@ -30,7 +27,7 @@
 }
 .registerGuests-body-content-holder h1 {
     font-weight: normal;
-    font-size: 5vw;
+    font-size: 3rem;
     margin-top: 3vw;
 }
 .registerGuests-form {
@@ -50,33 +47,27 @@
     background-color: transparent;
     outline: none;
     border: none;
-    font-size: 1.3vw;
+    font-size: 1rem;
 }
 .registerGuests-form-100p[type="text"] {
     border-bottom: thin solid rgba(253, 240, 213, 1);
 }
 .registerGuests-form-100p[type="text"]::placeholder {
     color: rgba(253, 240, 213, 1);
-    font-size: 1.3vw;
-}
-.registerGuests-form-holder label {
-    border-bottom: 0.2vh solid rgba(253, 240, 213, 1) ;
-    height: 5vh;
-    font-size: 1.3vw;
-    width: 48%;
+    font-size: 1rem;
 }
 .registerGuests-form50p {
-    width: 50%;
-    height: 5vh;
+    width: 48%;
+    height: 2rem;
     background-color: transparent;
     outline: none;
     border: none;
-    /* border-bottom: thin solid rgba(253, 240, 213, 1); */
-    font-size: 1.3vw;
+    border-bottom: thin solid rgba(253, 240, 213, 1);
+    font-size: 1rem;
 }
 .registerGuests-form50p::placeholder {
     color: rgba(253, 240, 213, 1);
-    font-size: 1.3vw;
+    font-size: 1rem;
 
 }
 .registerGuests-form25p {
@@ -87,19 +78,19 @@
     border: none;
     color: rgba(31, 21, 21, 1);
     border-radius: 0.5vw;
-    font-size: 1.3vw;
+    font-size: 1rem;
 }
 .registerGuests-form-100p[type="submit"] {
     background: rgba(253, 240, 213, 1);
     color: rgba(31, 21, 21, 1);
-    font-size: 1.2vw;
+    font-size: 1.2rem;
 }
-.registerGuests-passport .registerGuests-file-label {
+.registerGuests-file-label {
     border: thin solid rgba(253, 240, 213, 1);
     /* padding: 1vh 2vw; */
     width: 9vw;
     height: 5vh;
-    font-size: 1.4vw;
+    font-size: 1.4rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -111,11 +102,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 48%;
-    border-bottom: 0.2vh solid rgba(253, 240, 213, 1);
 }
 .registerGuests-passport span {
-    
+
 }
 .registerGuests-mobile-head {
     display: none;
